--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -5,7 +5,17 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>ENI-Enchères</h1>
+	<nav>
+		<h1>ENI-Enchères</h1>
+		<div sec:authorize="isAuthenticated()">
+			<a href="/encheres">Enchères</a> <a>Vendre un article</a> <a>mon
+				profil</a>
+			<form th:action="@{/logout}" method="post" class="text-center mt-6">
+				<button type="submit">Déconnexion</button>
+			</form>
+		</div>
+	</nav>
+
 	<h2>Liste des enchères</h2>
 	<span>
 		<h3>Filtres:</h3>
@@ -13,12 +23,9 @@
 	<span>
 		<form method="post">
 			<div>
-				<span>
-					<input type="text">
-				</span>
-				<span>
-					<h4>Catégorie :</h4> 
-					<input type="text">
+				<span> <input type="text">
+				</span> <span>
+					<h4>Catégorie :</h4> <input type="text">
 				</span>
 			</div>
 			<div>
@@ -26,8 +33,6 @@
 			</div>
 		</form>
 	</span>
-	<span>
-		
-	</span>
+	<span> </span>
 </body>
 </html>
