--- a/src/main/resources/templates/article/formCreateArticle.html
+++ b/src/main/resources/templates/article/formCreateArticle.html
@@ -12,6 +12,8 @@
 
 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
+<p th:each = "error : ${validationErrors}" th:text = "${error.defaultMessage}"></p>
+
 <label> <p>Nom</p> <input name="name" type="text"> </label>
 <label> <p>Description</p> <input name="description" type="text"> </label>
 
