refactor (html): login title

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Spring Security Example</title>
+<title>ENI Encheres YV Login</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script>
 	// Activation automatique du dark mode si configuré par l'utilisateur
