--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -8,7 +8,7 @@
 	<nav>
 		<h1>ENI-Enchères</h1>
 		<div sec:authorize="isAuthenticated()">
-			<a href="/encheres">Enchères</a> <a>Vendre un article</a> <a>mon
+			<a href="/encheres">Enchères</a> <a>Vendre un article</a> <a href="/register">mon
 				profil</a>
 			<form th:action="@{/logout}" method="post" class="text-center mt-6">
 				<button type="submit">Déconnexion</button>
