--- a/src/main/resources/templates/member/memberDetails.html
+++ b/src/main/resources/templates/member/memberDetails.html
@@ -22,6 +22,7 @@
             <td th:text="${member.firstName}">Prénom</td>
             <td th:text="${member.email}">Email</td>
             <td th:text="${member.phoneNumber}">Téléphone</td>
+            <td th:text="${member.roadNumber}">Téléphone</td>
             <td th:text="${member.roadName}">Rue</td>
             <td th:text="${member.zipCode}">Code Postal</td>
             <td th:text="${member.townName}">Ville</td>
