test commit for conflict reslove

--- a/src/main/resources/templates/encheres.html
+++ b/src/main/resources/templates/encheres.html
@@ -12,66 +12,112 @@
 
 	<h2>Recherche d'enchères</h2>
 	<span>
-		<form action="/article/searchArticles", method="post">
-		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-		<p th:each = "error : ${validationErrors}" th:text = "${error.defaultMessage}"></p>
-			
+		<form action="/article/searchArticles" , method="post">
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
+			<p th:each="error : ${validationErrors}"
+				th:text="${error.defaultMessage}"></p>
+
 			<fieldset>
-			<div>
-				<span> 
-					<h3>Filtre nom d'article (contient)</h3> 
-					<input type="text" name="like__-__name" placeholder="Recherche dans nom article">
-				</span> 
-				
-				<span sec:authorize="isAuthenticated()">
-					<h3>Toutes enchères</h3>
-					<div><input type="radio" name="equals__-__status" value="IGNORE" checked="checked" />Toutes enchères en cours</div>
-					
-					<div>
-					<h3>Mes achats</h3>
-					<div><input type="radio" name="equals__-__status" value="AuctionStarted" />Enchères en cours</div>
-					<div><input type="radio" name="equals__-__status" value="AuctionEnded" />Enchères remportées non retirées</div>
-					<div><input type="radio" name="equals__-__status" value="Removed" />Enchères remportées retirées</div>
-					</div>
-					
-					<div>
-					<h3>Mes enchères</h3>
-					<div><input type="radio" name="equals__-__status" value="Created" />Enchères pré-début</div>
-					<div><input type="radio" name="equals__-__status" value="AuctionStarted" />Enchères en cours</div>
-					<div><input type="radio" name="equals__-__status" value="AuctionEnded" />Enchères remportées non retirées</div>
-					<div><input type="radio" name="equals__-__status" value="Removed" />Enchères remportées retirées</div>
-					</div>
-					
-					
-				</span>
-				
-				<span>
-					<fieldset>
-					  <h3>Choisir la catégorie de l'article</h3>
-					  
-					  	<select name = "equals__-__idCategory">
-					  		<option value = "IGNORE">Toutes catégories</option>
-							<option th:each="cat : ${allCategories}" th:value = "${cat.idCategory}">
-							[[${cat.idCategory}]] - [[${cat.name}]]</option>
-						</select>
-					  
-					</fieldset>
-				</span>
-				
-			</div>
-			<div>
-				<button type="submit">Rechercher</button>
-			</div>
+				<div>
+					<span>
+						<h3>Filtre nom d'article (contient)</h3> <input type="text"
+						name="like__-__name" placeholder="Recherche dans nom article">
+					</span> <span sec:authorize="isAuthenticated()">
+						<h3>Toutes enchères</h3>
+						<div>
+							<input type="radio" name="equals__-__status" value="IGNORE"
+								checked="checked" />Toutes enchères en cours
+						</div>
+
+						<div>
+							<h3>Mes achats</h3>
+							<div>
+								<input type="radio" name="equals__-__status"
+									value="AuctionStarted" />Enchères en cours
+							</div>
+							<div>
+								<input type="radio" name="equals__-__status"
+									value="AuctionEnded" />Enchères remportées non retirées
+							</div>
+							<div>
+								<input type="radio" name="equals__-__status" value="Removed" />Enchères
+								remportées retirées
+							</div>
+						</div>
+
+						<div>
+							<h3>Mes enchères</h3>
+							<div>
+								<input type="radio" name="equals__-__status" value="Created" />Enchères
+								pré-début
+							</div>
+							<div>
+								<input type="radio" name="equals__-__status"
+									value="AuctionStarted" />Enchères en cours
+							</div>
+							<div>
+								<input type="radio" name="equals__-__status"
+									value="AuctionEnded" />Enchères remportées non retirées
+							</div>
+							<div>
+								<input type="radio" name="equals__-__status" value="Removed" />Enchères
+								remportées retirées
+							</div>
+						</div>
+
+
+					</span> <span>
+						<fieldset>
+							<h3>Choisir la catégorie de l'article</h3>
+
+							<select name="equals__-__idCategory">
+								<option value="IGNORE">Toutes catégories</option>
+								<option th:each="cat : ${allCategories}"
+									th:value="${cat.idCategory}">[[${cat.idCategory}]] -
+									[[${cat.name}]]</option>
+							</select>
+
+						</fieldset>
+					</span>
+
+				</div>
+				<div>
+					<button type="submit">Rechercher</button>
+				</div>
 			</fieldset>
 		</form>
 	</span>
-	
-	
-	
+
+
+
 	<h2>Liste des enchères</h2>
-	<span> 
-		
-		<table border="20">
+	<span>
+		<div class="container">
+			<div class="card" th:each="art : ${articles}">
+				<h3 th:text="${art.name}">Nom de l'article</h3>
+				<p>
+					<strong>Id Enchère:</strong> <span th:text="${art.idArticle}"></span>
+				</p>
+				<p>
+					<strong>Vendeur:</strong> <span th:text="${art.vendor.userName}"></span>
+					<a th:href="@{/member/{id}(id=${art.vendor.idMember})}">(Voir
+						profil)</a>
+				</p>
+				<p>
+					<strong>Date début:</strong> <span
+						th:text="${art.auctionStartDate}"></span>
+				</p>
+				<p>
+					<strong>Date fin:</strong> <span
+						th:text="${art.auctionEndDate}"></span>
+				</p>
+				<p>
+					<strong>Prix actuel:</strong> <span th:text="${art.salePrice}"></span>
+					€
+				</p>
+			</div>
+		</div> <!--  <table border="20">
 		  <tr>
 		    <th>Id Enchere</th>
 		    <th>Nom</th>
@@ -81,14 +127,15 @@
 		    <th>Prix actuel</th>
 		  </tr>
 		  <tr th:each="art : ${articles}">
+		  
 		    <td href="article/getId/something" th:text="${art.idArticle}"></td>
 		    <td th:text="${art.name}"></td>
-		    <td href="member/getId/something" th:text="${art.vendor.userName}"></td>
+		    <td th:text="${art.vendor.userName}"><a th:href="$/{art.Vendor.idMember}"></a></td>
 		    <td th:text="${art.auctionStartDate}"></td>
 		    <td th:text="${art.auctionEndDate}"></td>
 		    <td th:text="${art.salePrice}"></td>
 		  </tr>
-		</table>
+		</table>-->
 
 	</span>
 </body>
