--- a/src/main/resources/templates/member/memberDetails.html
+++ b/src/main/resources/templates/member/memberDetails.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Member Details</title>
+<title>Member Details</title>
 </head>
 <body>
-    <h1>Member Details</h1>
-    <table border="1">
-        <tr>
-            <th>Pseudo</th>
-            <th>Nom</th>
-            <th>Prénom</th>
-            <th>Email</th>
-            <th>Téléphone</th>
-            <th>Rue</th>
-            <th>Code Postal</th>
-            <th>Ville</th>
-        </tr>
-        <tr>
-            <td th:text="${member.userName}">Pseudo</td>
-            <td th:text="${member.name}">Nom</td>
-            <td th:text="${member.firstName}">Prénom</td>
-            <td th:text="${member.email}">Email</td>
-            <td th:text="${member.phoneNumber}">Téléphone</td>
-            <td th:text="${member.roadNumber}">Téléphone</td>
-            <td th:text="${member.roadName}">Rue</td>
-            <td th:text="${member.zipCode}">Code Postal</td>
-            <td th:text="${member.townName}">Ville</td>
-        </tr>
-    </table>
+	<h1>Member Details</h1>
+	<div class="member-info">
+		<div>
+			<strong>Pseudo:</strong> <span th:text="${member.userName}">Pseudo</span>
+		</div>
+		<div>
+			<strong>Nom:</strong> <span th:text="${member.name}">Nom</span>
+		</div>
+		<div>
+			<strong>Prénom:</strong> <span th:text="${member.firstName}">Prénom</span>
+		</div>
+		<div>
+			<strong>Email:</strong> <span th:text="${member.email}">Email</span>
+		</div>
+		<div>
+			<strong>Téléphone:</strong> <span th:text="${member.phoneNumber}">Téléphone</span>
+		</div>
+		<div>
+			<strong>Rue:</strong> <span th:text="${member.roadNumber}"></span> <span
+				th:text="${member.roadName}">Rue</span>
+		</div>
+		<div>
+			<strong>Code Postal:</strong> <span th:text="${member.zipCode}">Code
+				Postal</span>
+		</div>
+		<div>
+			<strong>Ville:</strong> <span th:text="${member.townName}">Ville</span>
+		</div>
+	</div>
+
 </body>
 </html>
